themes/-Dark-mocha.theme.css
/* ... */
div[class*="newBadge_"],
div[class*="tryItOutBadge_"] {
  color: var(--md-mocha-crust);
}
[class^="tabBar"] [class^="badge"] {
  color: var(--md-mocha-crust);
}
span[class*="channelMention"]:hover,
[class*="mention"]:not(
    [class*="mentionButton_"],
    [class*="mentionIcon_"]
  ):hover {
  color: var(--md-mocha-crust);
}
span[class^="attachmentLink"]:hover {
  color: var(--md-mocha-crust);
}
span[class^="attachmentLink"]:hover svg path {
  fill: var(--md-mocha-crust) !important;
}
div[class^="checkbox"][class*="checked_"] {
  border-color: var(--md-mocha-crust) !important;
}
div[class^="checkbox"][class*="checked_"] svg path {
  fill: var(--md-mocha-crust) !important;
}
path[class^="updateIconForeground"] {
  fill: var(--md-mocha-green) !important;
}
div[class^="button"][class*="revokeInvite_"] {
  background-color: var(--md-mocha-crust);
  background-image: url("data:image/svg+xml,%3Csvg height='18' viewBox='0 0 18 18' width='18' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='m14.25 4.808-1.057-1.058-4.193 4.192-4.192-4.192-1.058 1.058 4.192 4.192-4.192 4.193 1.058 1.057 4.192-4.193 4.193 4.193 1.057-1.057-4.193-4.193z' fill='#f38ba8' fill-rule='nonzero'/%3E%3Cpath d='m0 0h18v18h-18z'/%3E%3C/g%3E%3C/svg%3E");
}
div[class*="actions_"] button[class*="green_"] {
  background: var(--md-mocha-green);
}
div[class*="actions_"] button[class*="red_"] {
  background: var(--md-mocha-red);
}
div[class*="actions_"] button svg > path {
  fill: var(--md-mocha-crust) !important;
}
div[class*="actions_"] div[class^="panelButtonContainer"] button svg > path {
  fill: var(--md-mocha-text) !important;
}
div[class*="fixClipping"]
  div[class^="tip"]
  div[class*="keybind"]
  span[class^="key"] {
  color: var(--md-mocha-crust);
}
.theme-dark code.hljs {
  color: var(--md-mocha-text);
  background: var(--md-mocha-base);
}
.theme-dark code .hljs-keyword {
  color: var(--md-mocha-mauve);
}
.theme-dark code .hljs-built_in {
  color: var(--md-mocha-red);
}
.theme-dark code .hljs-type {
  color: var(--md-mocha-yellow);
}
.theme-dark code .hljs-literal {
  color: var(--md-mocha-peach);
}
.theme-dark code .hljs-number {
  color: var(--md-mocha-peach);
}
.theme-dark code .hljs-operator {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-punctuation {
  color: var(--md-mocha-subtext1);
}
.theme-dark code .hljs-property {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-regexp {
  color: var(--md-mocha-pink);
}
.theme-dark code .hljs-string {
  color: var(--md-mocha-green);
}
.theme-dark code .hljs-char.escape_ {
  color: var(--md-mocha-green);
}
.theme-dark code .hljs-subst {
  color: var(--md-mocha-subtext0);
}
.theme-dark code .hljs-symbol {
  color: var(--md-mocha-flamingo);
}
.theme-dark code .hljs-variable {
  color: var(--md-mocha-mauve);
}
.theme-dark code .hljs-variable.language_ {
  color: var(--md-mocha-mauve);
}
.theme-dark code .hljs-variable.constant_ {
  color: var(--md-mocha-peach);
}
.theme-dark code .hljs-title {
  color: var(--md-mocha-blue);
}
.theme-dark code .hljs-title.class_ {
  color: var(--md-mocha-yellow);
}
.theme-dark code .hljs-title.function_ {
  color: var(--md-mocha-blue);
}
.theme-dark code .hljs-params {
  color: var(--md-mocha-text);
}
.theme-dark code .hljs-comment {
  color: var(--md-mocha-surface2);
}
.theme-dark code .hljs-doctag {
  color: var(--md-mocha-red);
}
.theme-dark code .hljs-meta {
  color: var(--md-mocha-peach);
}
.theme-dark code .hljs-section {
  color: var(--md-mocha-blue);
}
.theme-dark code .hljs-tag {
  color: var(--md-mocha-subtext0);
}
.theme-dark code .hljs-name {
  color: var(--md-mocha-mauve);
}
.theme-dark code .hljs-attr {
  color: var(--md-mocha-blue);
}
.theme-dark code .hljs-attribute {
  color: var(--md-mocha-green);
}
.theme-dark code .hljs-bullet {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-code {
  color: var(--md-mocha-green);
}
.theme-dark code .hljs-emphasis {
  color: var(--md-mocha-red);
  font-style: italic;
}
.theme-dark code .hljs-strong {
  color: var(--md-mocha-red);
  font-weight: bold;
}
.theme-dark code .hljs-formula {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-link {
  color: var(--md-mocha-sapphire);
  font-style: italic;
}
.theme-dark code .hljs-quote {
  color: var(--md-mocha-green);
  font-style: italic;
}
.theme-dark code .hljs-selector-tag {
  color: var(--md-mocha-yellow);
}
.theme-dark code .hljs-selector-id {
  color: var(--md-mocha-blue);
}
.theme-dark code .hljs-selector-class {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-selector-attr {
  color: var(--md-mocha-mauve);
}
.theme-dark code .hljs-selector-pseudo {
  color: var(--md-mocha-teal);
}
.theme-dark code .hljs-template-tag {
  color: var(--md-mocha-flamingo);
}
.theme-dark code .hljs-template-variable {
  color: var(--md-mocha-flamingo);
}
.theme-dark code .hljs-addition {
  color: var(--md-mocha-green);
  background: #a6e3a126;
}
.theme-dark code .hljs-deletion {
  color: var(--md-mocha-red);
  background: #f38ba826;
}

/* Other code start here */

[class*="row__4f559"] {
	background-color: var(--md-mocha-crust);
}
[class*="item_f9d377"] {
	background-color: var(--md-mocha-mauve);
}
[class*="menu"] {
	background-color: var(--md-mocha-base);
}
[class*="item__183e8"] {
	background-color: var(--md-mocha-crust);
	border-radius: 5px;
}
/* Uncomment to get rounded messages */
/*.cozyMessage__9f4fd .contents_d3ae0d > .markup_a7e664:not(:empty, code) {
  background-color: var(--md-mocha-mantle);
  display: inline-block;
  max-width: 650px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: fit-content;
  margin: 0;
  padding: 8px;
  border-radius: 5px;
} */
[class*="unread__48cf4"] {
	background-color: var(--md-mocha-mauve);
}
[class^="winButton"] > svg {
	display: none;
}
[class^="winButton"] {
	background: none !important;
	top: 0;
	width: calc(12px + 8px);
	height: calc(12px + 8px);
	margin: -2px 4px 0px 0px;
}
/* ... */

